--- a/default.conf
+++ b/default.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
     ServerName localhost
     # Set the document root
-    DocumentRoot "/var/www/html/public"
-  <Directory "/var/www/html/public">
+    DocumentRoot "/var/www/html/crater/public"
+  <Directory "/var/www/html/crater/public">
     # Allow overriding the default configuration via `.htaccess`
     AllowOverride All
   </Directory>
